--- a/of/app/views/projects/_list.rhtml
+++ b/of/app/views/projects/_list.rhtml
@@ -20,8 +20,12 @@
     <td align="center"><%= h project.project_counter %></td>
   </tr>
   <tr class="item_b <%=class_name%>">
-    <td><a href="<%= url_for(:action => 'show', :id => project.id) %>"><img src="<%= url_for(:controller => :images,:action => "image", :id => project.icon,:size => 64) %>"/></a></td>
-    <td colspan="2"><%= h project.description %><br/></td>
+    <td colspan="3">
+      <a href="<%= url_for(:action => 'show', :id => project.id) %>">
+        <img src="<%= url_for(:controller => :images,:action => "image", :id => project.icon, :size => 64) %>" align="left" alt="<%= _('Project Logo') %>" title="<%= h(project.summary) %>"/>
+      </a>
+      <%= h project.description.chars[0..150] + "..." %><br/>
+    </td>
     <td align="center"><%= link_to _('Download'), releases_path(:project_id => project.id) %></td>
   </tr>
 <% end -%>
