user: add old_password check field when user change password

--- a/of/app/views/user/_password.rhtml
+++ b/of/app/views/user/_password.rhtml
@@ -3,6 +3,10 @@
   <%= f.hidden_field 'form', :value => 'change_password' %>
 
   <table class="form-table">
+    <% if not f.object.new_record? %>
+      <%= f.label :old_password, _('User|Old Password')+':', :must => true %>
+      <%= f.password_field "old_password", :size => 30 %>
+    <% end %>  
     <%= f.label :password, _('User|Password')+':', :must => true %>
     <%= f.password_field "password", :size => 30 %>
     <%= f.label :password_confirmation, _('User|Password Confirmation')+':', :must => true %>
