User Edit: table th style

--- a/of/app/views/user/edit.rhtml
+++ b/of/app/views/user/edit.rhtml
@@ -1,4 +1,4 @@
-<div title="user edit" class="form">
+<div id="user_edit" title="user edit" class="form">
   <%#= head_helper :error => true %>
   <%= error_messages_for :user %>
   <fieldset style='float:right'>
