--- a/trunk/of/app/views/user/forgot_password.rhtml
+++ b/trunk/of/app/views/user/forgot_password.rhtml
@@ -4,7 +4,7 @@
   <div class="form-padding">
     <%#= message_helper 'forgot_reset' %>
 
-    <% form_for @user, :url => {:action => :forgot_password}, :builder => ApplicationHelper::TwoColumnFormBuilder do |f|-%>
+    <% form_for :user, @user, :url => {:action => :forgot_password}, :builder => ApplicationHelper::TwoColumnFormBuilder do |f|-%>
       <label><%= _('User|Email')%>: </label>
       <%= f.text_field "email", :size => 30 %><br/>
 
