--- a/of/app/views/category/list.rhtml
+++ b/of/app/views/category/list.rhtml
@@ -4,7 +4,7 @@
   <legend><%= _("Project|Maturity") %></legend>
   <ul>
   <% Project::MATURITY.values.sort.each do |value| -%>
-    <li><%= link_to Project::maturity_to_s(value), :controller => :projects, :cat => 'license', :name => value%></li>
+    <li><%= link_to "#{Project::maturity_to_s(value)} (#{(@maturity[value] || 0).to_s})", :controller => :projects, :cat => 'maturity', :name => value %></li>
   <% end -%>
   </ul>
 </fieldset>
@@ -12,8 +12,8 @@
 <fieldset>
   <legend><%= _("Project|License") %></legend>
   <ul>
-  <% Project::LICENSES.values.sort.each do |value| -%>
-    <li><%= link_to Project::license_to_s(value), :controller => :projects, :cat => 'license', :name => value%></li>
+  <% Project::LICENSES.values.select{|x|@license[x.to_s]}.sort.each do |value| -%>
+    <li><%= link_to "#{Project::license_to_s(value)} (#{@license[value.to_s]})", :controller => :projects, :cat => 'license', :name => value %></li>
   <% end -%>
   </ul>
 </fieldset>
@@ -21,8 +21,8 @@
 <fieldset>
   <legend><%= _("Project|Contentlicense") %></legend>
   <ul>
-  <% for item in Project::CONTENT_LICENSES -%>
-    <li><%= link_to item, :controller => :projects, :cat => 'contentlicense', :name => item %></li>
+  <% Project::CONTENT_LICENSES.values.select{|x|@content_license[x.to_s]}.sort.each do |value| -%>
+    <li><%= link_to "#{Project::contentlicense_to_s(value)} (#{@content_license[value.to_s]})", :controller => :projects, :cat => 'contentlicense', :name => value %></li>
   <% end -%>
   </ul>
 </fieldset>
@@ -30,24 +30,28 @@
 <fieldset>
   <legend><%= _("Project|Platform") %></legend>
   <ul>
-  <% for item in Project::PLATFORMS -%>
-    <li><%= link_to item, :controller => :projects, :cat => 'platform', :name => item %></li>
-  <% end -%>
+  <% 
+  	keys = Project::PLATFORMS.sort + (@platform.keys - Project::PLATFORMS).sort
+  	keys.each do |key|
+  %>
+    <li><%= link_to "#{key} (#{(@platform[key] || 0).to_s})", :controller => :projects, :cat => 'platform', :name => key %></li>
+  <% end %>
   </ul>
 </fieldset>
 
 <fieldset>
   <legend><%= _("Project|Programminglanguage") %></legend>
   <ul>
-  <% for item in Project::PROGRAMMING_LANGUAGES -%>
-    <li><%= link_to item, :controller => :projects, :cat => 'programminglanguage', :name => item %></li>
+  <% 
+  	keys = Project::PROGRAMMING_LANGUAGES.sort + (@programming_language.keys - Project::PROGRAMMING_LANGUAGES).sort
+  	keys.each do |key|
+  -%>
+    <li><%= link_to "#{key} (#{(@programming_language[key] || 0).to_s})", :controller => :projects, :cat => 'programminglanguage', :name => key %></li>
   <% end -%>
   </ul>
 </fieldset>
-<div style="display:none;">
-<%=@platform%><br/>
-<%=@programming_language%><br/>
-<%=@intended_audience%><br/>
+<div style="display:block;">
+<ul>
 </div>
 
 
