--- a/trunk/of/app/views/partials/_top_menu_data.rhtml
+++ b/trunk/of/app/views/partials/_top_menu_data.rhtml
@@ -58,8 +58,8 @@ var menudata=
     },
     {id:'<%=_('menu_Contact Us')%>', url:'m3url',
       submenu:[
-        {id:'<%=_('TODO: 聯絡方式')%>', url:'m1s1ur2'},
-        {id:'<%=_('Bug Report')%>', url:'m1s1ur2'}
+        {id:'<%=_('menu_Contact Us')%>', url:'mailto:contact@openfoundry.org'},
+        {id:'<%=_('Bug Report')%>', url:'/projects/1/rt'}
       ]
     }
   ];
