--- a/of/app/views/user/_password.rhtml
+++ b/of/app/views/user/_password.rhtml
@@ -4,12 +4,12 @@
 
   <table class="form-table">
     <% if not f.object.new_record? %>
-      <%= f.label :old_password, _('User|Old Password')+':', :must => true %>
+      <%= f.label :old_password, _('User|Old Password')+':', :must => true, :help => _('User|Old_password|help') %>
       <%= f.password_field "old_password", :size => 30 %>
     <% end %>  
-    <%= f.label :password, _('User|Password')+':', :must => true %>
+    <%= f.label :password, _('User|Password')+':', :must => true, :help => _('User|Password|help') %>
     <%= f.password_field "password", :size => 30 %>
-    <%= f.label :password_confirmation, _('User|Password Confirmation')+':', :must => true %>
+    <%= f.label :password_confirmation, _('User|Password Confirmation')+':', :must => true, :help => _('User|Password_Confirm|help') %>
     <%= f.password_field "password_confirmation", :size => 30 %>
   </table>
     <%= submit_tag _('User|Change Password'), "class" => "button" if submit%>
