--- a/of/app/views/user/_edit.rhtml
+++ b/of/app/views/user/_edit.rhtml
@@ -2,15 +2,15 @@
   <legend><%= _('User Info') %></legend>
   <%= f.hidden_field 'form', :value => 'edit' %>
   <table class='form-table'>
-    <%= f.label :login, _('User|Login')+':'%>
-    <%= f.text_field "login", :size => 30 %>
-    <%= f.label :firstname, _('User|Firstname')+':' %>
+    <%= f.label :login, _('User|Login')+':', :help => _('User|Login|Help')%>
+    <%= f.text_field "login", :size => 30, :disabled => !f.object.new_record? %>
+    <%= f.label :firstname, _('User|Firstname')+':', :help => _('User|firstname|help')%>
     <%= f.text_field :firstname %>
-    <%= f.label :lastname, _('User|Lastname')+':' %>
+    <%= f.label :lastname, _('User|Lastname')+':' , :help => _('User|firstname|help')%>
     <%= f.text_field "lastname" %>
-    <%= f.label :language, _('User|Language')+':' %>
-    <%= f.language_select "user_language", @user.language, :name => "user[language]"%>
-    <%= f.label :timezone, _('User|TimeZone')+':'%>
+    <%= f.label :language, _('User|Language')+':', :help => _('User|firstname|help') %>
+    <%= f.language_select "user_language", @user.language, :name => "user[language]", :help => _('User|firstname|help')%>
+    <%= f.label :timezone, _('User|TimeZone')+':', :help => _('User|firstname|help')%>
     <%= f.time_zone_select 'timezone', TimeZone.all.sort, :model => TimeZone %>
   </table>
     <%= submit_tag( new_record ? _('User|Signup') : _('User|Change Settings'), "class" => "button" ) if submit %>
