project: license/contentlicense: hash => ordered array + hash

--- a/of/app/views/projects/_form.rhtml
+++ b/of/app/views/projects/_form.rhtml
@@ -44,15 +44,17 @@ AAA
 <%
   choosen_licenses = (@project.license || "").split(",").grep(/./).map(&:to_i)
   tmp_licenses = ""
-  Project::LICENSES.values.sort.each do |i|
-    tmp_licenses += check_box_tag("project[license][#{i}]", i, choosen_licenses.include?(i)) + "#{Project.license_to_s(i)}<br>\n"
+  Project::LICENSE_DISPLAY_KEYS.each do |i|
+    tmp_licenses += check_box_tag("project[license][#{i}]", i, choosen_licenses.include?(i)) +
+      "#{Project.license_display_str(i)}<br>\n"
   end
 %>
 <%
   choosen_contentlicenses = (@project.contentlicense || "").split(",").grep(/./).map(&:to_i)
   tmp_contentlicenses = ""
-  Project::CONTENT_LICENSES.values.sort.each do |i|
-    tmp_contentlicenses += check_box_tag("project[contentlicense][#{i}]", i, choosen_contentlicenses.include?(i)) + "#{Project.contentlicense_to_s(i)}<br>\n"
+  Project::CONTENT_LICENSE_DISPLAY_KEYS.each do |i|
+    tmp_contentlicenses += check_box_tag("project[contentlicense][#{i}]", i, choosen_contentlicenses.include?(i)) +
+      "#{Project.content_license_display_str(i)}<br>\n"
   end
 %>
 <table class="form-table">
