--- a/trunk/of/app/views/projects/show.rhtml
+++ b/trunk/of/app/views/projects/show.rhtml
@@ -23,8 +23,8 @@
   _("Project|HOMEPAGE"), (url = OPENFOUNDRY_HOMEPAGE_URL % @project.name; link_to url, url),
   _("Project|Contactinfo"), (h @project.contactinfo),
   _("Project|Maturity"), (h @project.maturity_to_s),
-  _("Project|License"), @project.license.split(",").grep(/./).map {|x| Project::license_to_s(x.to_i)}.join("<br>\n"),
-  _("Project|Contentlicense"), @project.contentlicense.split(",").grep(/./).map {|x| Project::contentlicense_to_s(x.to_i)}.join("<br>\n"), 
+  _("Project|License"), @project.licenses_display_array.join("<br>\n"),
+  _("Project|Contentlicense"), @project.content_licenses_display_array.join("<br>\n"),
   _("Project|Licensingdescription"), (h @project.licensingdescription),
   _("Project|Platform"), (h show_with_seperator(@project.platform)),
   _("Project|Programminglanguage"), (h show_with_seperator(@project.programminglanguage)),
