--- a/trunk/of/app/views/projects/show.rhtml
+++ b/trunk/of/app/views/projects/show.rhtml
@@ -31,7 +31,8 @@
   _("Project|Intendedaudience"), (h @project.intendedaudience),
   _("Project|Vcs"), (h @project.vcs_to_s),
   _("Project|Vcsdescription"), (h @project.vcsdescription),
-  _("Project|Creator"), (u = User.find(@project.creator); u.login + " " +  user_portrait_link(u))
+  _("Project|Creator"), (u = User.find(@project.creator); u.login + " " +  user_portrait_link(u)),
+  _("Project|Created at"), tz_datetime(@project.created_at)
   )
 %>
 </table>
