--- a/of/app/views/releases/uploadfiles.rhtml
+++ b/of/app/views/releases/uploadfiles.rhtml
@@ -17,7 +17,7 @@
           }), :update => "uploadfiles_view"
         %>
 	<%= link_to '[download]', download_url(:project_name => @project.name, 
-					       :release_name => @release.name,
+					       :release_version => @release.version,
 					       :file_name => f.path )
         %>
     <%end%>
