--- a/trunk/of/app/views/user/home.rhtml
+++ b/trunk/of/app/views/user/home.rhtml
@@ -1,3 +1,18 @@
+<fieldset style='float:right'>
+  <legend><%= _('User Icon') %></legend>
+  <center>
+    <img src="<%= url_for(:controller => :images, :action => "image", :id => @icon) %>"/>
+  </center>
+  <% if(@my)%>
+    <br/>
+    <a href="#" onclick="Effect.toggle('UploadImage','appear'); return false">
+      <%=_('Change Icon')%>
+    </a>
+    <%= render :partial => 'images/edit', :locals => 
+    {:image_id => @icon, :id => current_user.id,
+      :type => 'User', :back_to => url_for(:controller => :user, :action => :edit) }%>
+  <% end %>
+</fieldset>
 <dl>
   <dt>
   <% if(@my)%>
