user: timezone display bug fix

--- a/of/app/views/user/home.rhtml
+++ b/of/app/views/user/home.rhtml
@@ -56,7 +56,7 @@
     <%= _('Signup Date') %>:
     </dt>
     <dd>
-    <%= @created_at %>
+    <%= tz_datetime(@created_at) %>
     </dd>
   <% end %>
 </dl>
