--- a/of/app/views/projects/_list.rhtml
+++ b/of/app/views/projects/_list.rhtml
@@ -26,7 +26,7 @@
       </a>
       <%= h project.description.chars[0..150] + "..." %><br/>
     </td>
-    <td align="center"><%= link_to _('Download'), releases_path(:project_id => project.id) %></td>
+    <td align="center"><%= link_to _('Download'), download1_path(:project_id => project.id) %></td>
   </tr>
 <% end -%>
 </table>
