--- a/of/app/views/news/show.rhtml
+++ b/of/app/views/news/show.rhtml
@@ -9,7 +9,7 @@
   <%end%>
 </div>
 
-<% if permit?("site_admin") || (@project != nil && permit?("admin of :project")) -%>
+<% if fpermit?("news", params[:project_id]) -%>
 <p class="tags"><%=_('Tags')%>:<%=@news.tags%></p>
 <p>
   <%= link_to _('Edit'), :action => 'edit', :id => @news %>
